@@ -209,3 +209,4 @@ Issue #2102405 by johnv: Fixed indices for Workflow Scheduled Transitions.
 Issue #2019345 by johnv: Fixed order of States in Options list doesn't respect weight.
 Issue #2019345 by johnv: Added 'property_info' to Workflow Field for Entity/ Rules support.
 Issue #2019345 by johnv: Moved 'workflow_load' functon back to main module, since this is a menu callback.
+Issue #2019345 by johnv: Added 'grouped' options for Workflow::getOptions().
